{
    "name": "CursorControls",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "81e50856-f134-4e2f-a7bd-bf7054952a99",
            "actions": [
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "5ac3e8ad-11bd-4a8e-8389-e050d3d6b71a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseControlCamera",
                    "type": "Button",
                    "id": "9f5e736c-be16-44e8-a942-69ea67fb3d37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f35b281b-f600-400c-bdcc-c05ac38f53d0",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=2,y=2)",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2753341-e53d-47b8-921f-8d1162440913",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseControlCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}